Add dependencies and  some util services.

--- a/MismeAPI/MismeAPI/appsettings.json
+++ b/MismeAPI/MismeAPI/appsettings.json
@@ -10,5 +10,13 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "BearerTokens": {
+    "Key": "GUID-A54a-SS15-SwEr-opo4-56YH",
+    "Issuer": "http://mismeapi.com",
+    "Audience": "Any",
+    "AccessTokenExpirationHours": 7,
+    "RefreshTokenExpirationHours": 60
+  },
+
   "AllowedHosts": "*"
 }
