--- a/MismeAPI/MismeAPI.Service/MismeAPI.Service.csproj
+++ b/MismeAPI/MismeAPI.Service/MismeAPI.Service.csproj
@@ -9,6 +9,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="DeviceDetector.NET" Version="4.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.0" />
+    <PackageReference Include="Askmethat.Aspnet.JsonLocalizer" Version="2.1.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.0" />
+    <PackageReference Include="rlcx.suid" Version="1.0.1" />
+    <PackageReference Include="Sendgrid" Version="9.12.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.6.0" />
+    <PackageReference Include="Wangkanai.Detection" Version="2.0.0" />
+    <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
   </ItemGroup>
 </Project>
