Add personal data get methods.

--- a/MismeAPI/MismeAPI/appsettings.json
+++ b/MismeAPI/MismeAPI/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    //"ApiConnection": "server=localhost;port=3306;database=mismedevdb;user=root;password=root;CharSet=utf8;Convert Zero Datetime=True;TreatTinyAsBoolean=true;"
-    "ApiConnection": "server=mismeinstance.c3a5sx4y6gkf.us-east-2.rds.amazonaws.com;port=3306;database=mismedb;user=root;password=rootroot;CharSet=utf8;Convert Zero Datetime=True;TreatTinyAsBoolean=true;"
+    "ApiConnection": "server=localhost;port=3306;database=mismedevdb;user=root;password=root;CharSet=utf8;Convert Zero Datetime=True;TreatTinyAsBoolean=true;"
+    //"ApiConnection": "server=mismeinstance.c3a5sx4y6gkf.us-east-2.rds.amazonaws.com;port=3306;database=mismedb;user=root;password=rootroot;CharSet=utf8;Convert Zero Datetime=True;TreatTinyAsBoolean=true;"
   },
   "Logging": {
     "LogLevel": {
