Fit and finish activation account.

--- a/MismeAPI/MismeAPI/appsettings.json
+++ b/MismeAPI/MismeAPI/appsettings.json
@@ -17,6 +17,10 @@
     "AccessTokenExpirationHours": 7,
     "RefreshTokenExpirationHours": 60
   },
+  "SendGrid": {
+    "SendGridKey": "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",
+    "SendGridUser": "no-reply@mismedidas.com"
+  },
 
   "AllowedHosts": "*"
 }
