--- a/.gitignore
+++ b/.gitignore
@@ -341,3 +341,4 @@ healthchecksdb
 
 /MismeAPI/MismeAPI/appsettings.json
 MismeAPI/MismeAPI/appsettings.json
+MismeAPI/MismeAPI/appsettings.Development.json
