--- a/MismeAPI/MismeAPI/appsettings.json
+++ b/MismeAPI/MismeAPI/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "ApiConnection": ""
+    "ApiConnection": "server=localhost;port=3306;database=mismedevdb;user=root;password=root;CharSet=utf8;Convert Zero Datetime=True;TreatTinyAsBoolean=true;"
+    //"ApiConnection": "server=mismeinstance.c3a5sx4y6gkf.us-east-2.rds.amazonaws.com;port=3306;database=mismedb;user=root;password=rootroot;CharSet=utf8;Convert Zero Datetime=True;TreatTinyAsBoolean=true;"
   },
   "Logging": {
     "LogLevel": {
@@ -17,8 +18,8 @@
     "RefreshTokenExpirationHours": 60
   },
   "SendGrid": {
-    "SendGridKey": "",
-    "SendGridUser": ""
+    "SendGridKey": "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",
+    "SendGridUser": "no-reply@mismedidas.com"
   },
 
   "AllowedHosts": "*"
