Add answer services.

--- a/MismeAPI/MismeAPI/appsettings.json
+++ b/MismeAPI/MismeAPI/appsettings.json
@@ -17,6 +17,11 @@
     "AccessTokenExpirationHours": 7,
     "RefreshTokenExpirationHours": 60
   },
+  "AWS": {
+    "AccessKey": "AKIA2ZAJ2METE5A32L6T",
+    "SecretKey": "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",
+    "BucketName": "mismeapi"
+  },
   "SendGrid": {
     "SendGridKey": "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",
     "SendGridUser": "no-reply@mismedidas.com"
