--- a/MismeAPI/MismeAPI/MismeAPI.csproj
+++ b/MismeAPI/MismeAPI/MismeAPI.csproj
@@ -41,4 +41,8 @@
   <ItemGroup>
     <Folder Include="logs\" />
   </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
 </Project>
