--- a/MismeAPI/MismeAPI/MismeAPI.csproj
+++ b/MismeAPI/MismeAPI/MismeAPI.csproj
@@ -41,9 +41,19 @@
 
   <ItemGroup>
     <Folder Include="logs\" />
+    <Folder Include="Templates\" />
   </ItemGroup>
 
   <ItemGroup>
     <None Include="..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Templates\AccountActivation.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Templates\ForgotPassword.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
