--- a/MismeAPI/MismeAPI.Common/MismeAPI.Common.csproj
+++ b/MismeAPI/MismeAPI.Common/MismeAPI.Common.csproj
@@ -11,4 +11,7 @@
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <NoWarn>1701;1702;1591</NoWarn>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="3.1.2" />
+  </ItemGroup>
 </Project>
