Revert "Add device endpoint."
This reverts commit dfdab9f0b2a33846c3a4398280c62f482fbad2a2.

--- a/MismeAPI/MismeAPI/appsettings.json
+++ b/MismeAPI/MismeAPI/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "ApiConnection": "server=localhost;port=3306;database=mismedevdb;user=root;password=root;CharSet=utf8;Convert Zero Datetime=True;TreatTinyAsBoolean=true;"
-    //"ApiConnection": "server=mismeinstance.c3a5sx4y6gkf.us-east-2.rds.amazonaws.com;port=3306;database=mismedb;user=root;password=rootroot;CharSet=utf8;Convert Zero Datetime=True;TreatTinyAsBoolean=true;"
+    //"ApiConnection": ""
+    "ApiConnection": ""
   },
   "Logging": {
     "LogLevel": {
@@ -18,13 +18,13 @@
     "RefreshTokenExpirationHours": 60
   },
   "AWS": {
-    "AccessKey": "AKIA2ZAJ2METIDMNNHGF",
-    "SecretKey": "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",
+    "AccessKey": "",
+    "SecretKey": "",
     "BucketName": "mismeapi"
   },
   "SendGrid": {
-    "SendGridKey": "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",
-    "SendGridUser": "no-reply@mismedidas.com"
+    "SendGridKey": "",
+    "SendGridUser": ""
   },
 
   "AllowedHosts": "*"
