App settings set.

--- a/MismeAPI/MismeAPI/appsettings.json
+++ b/MismeAPI/MismeAPI/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "ApiConnection": "server=localhost;port=3306;database=mismedevdb;user=root;password=root;CharSet=utf8;Convert Zero Datetime=True;TreatTinyAsBoolean=true;"
-    //"ApiConnection": "server=mismeinstance.c3a5sx4y6gkf.us-east-2.rds.amazonaws.com;port=3306;database=mismedb;user=root;password=rootroot;CharSet=utf8;Convert Zero Datetime=True;TreatTinyAsBoolean=true;"
+    "ApiConnection": ""
   },
   "Logging": {
     "LogLevel": {
@@ -11,20 +10,20 @@
     }
   },
   "BearerTokens": {
-    "Key": "GUID-A54a-SS15-SwEr-opo4-56YH",
-    "Issuer": "http://mismeapi.com",
+    "Key": "",
+    "Issuer": "",
     "Audience": "Any",
     "AccessTokenExpirationHours": 7,
     "RefreshTokenExpirationHours": 60
   },
   "AWS": {
-    "AccessKey": "AKIA2ZAJ2METIDMNNHGF",
-    "SecretKey": "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",
-    "BucketName": "mismeapi"
+    "AccessKey": "",
+    "SecretKey": "",
+    "BucketName": ""
   },
   "SendGrid": {
-    "SendGridKey": "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",
-    "SendGridUser": "no-reply@mismedidas.com"
+    "SendGridKey": "",
+    "SendGridUser": ""
   },
 
   "AllowedHosts": "*"
