--- a/MismeAPI/MismeAPI.Service/MismeAPI.Service.csproj
+++ b/MismeAPI/MismeAPI.Service/MismeAPI.Service.csproj
@@ -22,5 +22,6 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.6.0" />
     <PackageReference Include="Wangkanai.Detection" Version="2.0.0" />
     <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0" />
   </ItemGroup>
 </Project>
