--- a/MismeAPI/MismeAPI.Service/MismeAPI.Service.csproj
+++ b/MismeAPI/MismeAPI.Service/MismeAPI.Service.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="AWSSDK.SimpleSystemsManagement" Version="3.3.118.1" />
     <PackageReference Include="CorePush" Version="2.1.0" />
     <PackageReference Include="DeviceDetector.NET" Version="4.1.0" />
+    <PackageReference Include="FirebaseAdmin" Version="1.9.2" />
     <PackageReference Include="Hangfire" Version="1.7.9" />
     <PackageReference Include="Hangfire.MySqlStorage" Version="2.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.0" />
