Config needed to solve 405 error.

--- a/MismeAPI/MismeAPI/MismeAPI.csproj
+++ b/MismeAPI/MismeAPI/MismeAPI.csproj
@@ -50,6 +50,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Update="web.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="Templates\AccountActivation.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
