--- a/MismeAPI/MismeAPI.Service/MismeAPI.Service.csproj
+++ b/MismeAPI/MismeAPI.Service/MismeAPI.Service.csproj
@@ -10,12 +10,14 @@
 
   <ItemGroup>
     <PackageReference Include="AWSSDK.S3" Version="3.3.110.21" />
+    <PackageReference Include="AWSSDK.SimpleEmail" Version="3.3.101.150" />
     <PackageReference Include="AWSSDK.SimpleSystemsManagement" Version="3.3.121" />
     <PackageReference Include="CorePush" Version="2.1.0" />
     <PackageReference Include="DeviceDetector.NET" Version="4.1.0" />
     <PackageReference Include="FirebaseAdmin" Version="1.9.2" />
     <PackageReference Include="Hangfire" Version="1.7.9" />
     <PackageReference Include="Hangfire.MySqlStorage" Version="2.0.2" />
+    <PackageReference Include="MailKit" Version="2.6.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.0" />
     <PackageReference Include="Askmethat.Aspnet.JsonLocalizer" Version="2.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
