--- a/MismeAPI/MismeAPI.Service/MismeAPI.Service.csproj
+++ b/MismeAPI/MismeAPI.Service/MismeAPI.Service.csproj
@@ -22,7 +22,9 @@
     <PackageReference Include="Askmethat.Aspnet.JsonLocalizer" Version="2.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.1" />
+    <PackageReference Include="PdfRpt.Core" Version="1.4.3" />
     <PackageReference Include="rlcx.suid" Version="1.0.1" />
+    <PackageReference Include="ScottPlot" Version="4.0.42" />
     <PackageReference Include="Sendgrid" Version="9.12.0" />
     <PackageReference Include="Stripe.net" Version="39.11.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.6.0" />
