--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -8,6 +8,8 @@ on:
 
 jobs:
   build:
+    env:
+      API_PATH: ./MismeAPI/MismeAPI/MismeAPI.csproj 
 
     runs-on: ubuntu-latest
 
@@ -18,8 +20,8 @@ jobs:
       with:
         dotnet-version: 3.1.301
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore $API_PATH
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build --no-restore $API_PATH
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test --no-build --verbosity normal $API_PATH
